# doxidize

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Doxidize.toml  README.md  build.html  design-guide.html  generate.html  index.html  initialization.html  publish.html
api/: ALWAYS_FIVE.html  ALWAYS_NONE.html  Config.html  NestedStruct.html  Point.html  Speak.html  StructAlias.html  TrafficLight.html  build.html  create_skeleton.html  empty.html  examples.html  generate.html  index.html  nested_module.html  next_level1.html  next_level2.html  next_level3.html  ops.html  publish.html  serve.html  strip_leading_space.html  this_should_be_a_method.html  trait-overview.html
api/examples/: Speak.html
api/examples/nested_module/: StructAlias.html  this_should_be_a_method.html
docs/: Menu.toml  README.md  build.md  design-guide.md  for-contributors.md  generate.md  initialization.md  publish.md  quickstart.md  status.md
docs/api/: ALWAYS_FIVE.md  ALWAYS_NONE.md  Config.md  NestedStruct.md  Point.md  README.md  Speak.md  StructAlias.md  TrafficLight.md  build.md  create_skeleton.md  empty.md  examples.md  generate.md  module-overview.md  nested_module.md  next_level1.md  next_level2.md  next_level3.md  ops.md  publish.md  serve.md  strip_leading_space.md  struct-overview.md  this_should_be_a_method.md  trait-overview.md
docs/examples/: simple-cli.md
docs/getting-started/: basic-usage.md  installation.md
docs/guides/: doxidize-build.md  doxidize-generate.md  doxidize-publish.md  doxidize-serve.md  doxidize.md
docs/users-guide/: build.md  clean.md  doxidize-toml.md  flags.md  init.md  introduction.md  menu-toml.md  publish.md  serve.md  update.md  workflow.md
doxidize/api/: Config.html  index.html
doxidize/getting-started/: installation.html
doxidize/guides/: doxidize-publish.html  doxidize.html
examples/: simple-cli.html  simple-cli.rs
getting-started/: basic-usage.html  installation.html
guides/: doxidize-build.html  doxidize-generate.html  doxidize-publish.html  doxidize-serve.html  doxidize.html
public/doxidize/: for-contributors.html  index.html  quickstart.html  status.html
src/: cargo.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  ui.rs
src/examples/: mod.rs
src/ops/: build.rs  clean.rs  create_skeleton.rs  init.rs  mod.rs  publish.rs  serve.rs  update.rs
templates/: example.hbs  page.hbs
templates/html/: page.hbs
templates/markdown/: api.hbs  const.hbs  enum.hbs  example.hbs  function.hbs  mod.hbs  static.hbs  struct.hbs  trait.hbs  type.hbs
tests/: build.rs  clean.rs  generate.rs  init.rs  initialize.rs
tests/util/: mod.rs
users-guide/: build.html  clean.html  doxidize-toml.html  init.html  introduction.html  publish.html  workflow.html
(+32 files in other folders)
