[package]
name = "doxidize"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"
description = "none for now"

[dependencies]
comrak = "0.2.5"
configure = "0.1.1"
configure_derive = "0.1.1"
ctrlc = "3.1.0"
failure = "0.1.1"
failure_derive = "0.1.1"
handlebars = "0.32"
notify = "4.0.3"
remove_dir_all = "0.5"
rls-analysis = "0.11"
rls-data = { version = "0.15", features = ["serialize-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog-async = "2.3.0"
slog-term = "2.3.0"
slugify = "0.1.0"
structopt = "0.1.0"
structopt-derive = "0.1.0"
toml_edit = "0.1.1"
walkdir = "2.0.1"

[dependencies.slog]
version = "2.2"
# uncomment this if you'd like to read trace-level messages
# features = ["max_level_trace"]

[dependencies.simple-server]
git = "https://github.com/steveklabnik/simple-server"

[dev-dependencies]
tempdir = "0.3"
